--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.UlikBatik"
         tools:targetApi="31">
         <activity
+            android:name=".ui.scan.ScanActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.detailCatalog.DetailCatalogActivity"
             android:exported="false" />
         <activity
