--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,12 @@
         tools:targetApi="31">
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".ui.boarding.BoardingActivity"
+            android:name=".ui.upload.CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.dashboard.DashboardActivity"
             android:exported="false" />
         <activity
             android:name=".ui.detailCatalog.DetailCatalogActivity"
@@ -47,10 +50,10 @@
             android:name=".ui.detailPost.DetailPostActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.dashboard.DashboardActivity"
+            android:name=".ui.boarding.BoardingActivity"
+            android:exported="true"
             android:label="@string/title_activity_dashboard"
-            android:theme="@style/Theme.UlikBatik.NoActionBar"
-            android:exported="true">
+            android:theme="@style/Theme.UlikBatik.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
